Add a saveMany to the content storage service and use it in the decompress action